--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "^4.18.2",
     "google-spreadsheet": "^3.3.0",
     "googleapis": "^110.0.0",
+    "optimist": "^0.6.1",
     "pg": "^8.8.0",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "typescript": "^4.9.5"
   }
 }
